# gl_framework

./: .clang-format  .cmake-format.py  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.txt  copyright.txt  openxr.oculus.hack.runtime.json  renderdoc.cap
cmake_modules/: FindFreeImage.cmake  FindSNDFILE.cmake
gfx_sources/: vague_controller.blend
src/: ImGui__ChaiScript.h  application.cpp  application.hpp  apply_format.sh  audio_system.cpp  audio_system.hpp  build_config.template.hpp  camera.cpp  camera.hpp  camera_controller.cpp  camera_controller.hpp  chaiscript_glm.hpp  command.hpp  cubemap.hpp  freeimage_raii.cpp  freeimage_raii.hpp  gamepad_manager.hpp  gizmo.cpp  gizmo.hpp  gl_dx_interop.cpp  gl_dx_interop.hpp  gltf_loader.cpp  gltf_loader.hpp  gui.cpp  gui.hpp  image.cpp  image.hpp  input_command.hpp  input_handler.cpp  input_handler.hpp  level_system.cpp  level_system.hpp  light.hpp  main.cpp  material.h  mesh.hpp  nameof.hpp  node.cpp  node.hpp  opengl_debug_group.cpp  (+42 more)
unpacked_res/: config.toml
unpacked_res/gltf/: vague_controller.glb
unpacked_res/levels/: .sponza.json.swp  sponza.json
unpacked_res/scripts/: print_hello.chai  rotate_test.chai  test.chai
unpacked_res/shaders/: debug.frag.glsl  debug.vert.glsl  debug_vertex_color.frag.glsl  debug_vertex_color.vert.glsl  depth-mr.frag  depth-mr.vert  shadow.frag.glsl  shadow.vert.glsl  simple.frag.glsl  simple.vert.glsl  skybox.frag.glsl  skybox.vert.glsl  splash.frag.glsl  splash.vert.glsl  unlit.frag.glsl
